--- a/myStyles.css
+++ b/myStyles.css
@@ -1,7 +1,6 @@
 body {
   background: #F0E7FA;
   text-align: center;
-  font-family: 'Noto Sans TC', sans-serif;
   margin: 0;
   padding: 0;
 }
@@ -10,11 +9,13 @@ h1 {
   background: #9EDBF7;
   margin: 10px;
   padding: 10px;
+  font-family: 'Lato', sans-serif;
+  font-size: 900;
 }
 
 h2 {
-  font-family: 'Noto Sans TC', sans-serif;
-  font-size: 700;
+  font-family: 'Lato', sans-serif;
+  font-size: 900;
   background: #9EDBF7;
   margin: 10px;
   padding: 10px;
@@ -37,7 +38,9 @@ a {
   color: black;
   font-weight: bold;
   text-transform: uppercase;
-  font-family: 'Noto Sans TC', sans-serif;
+  font-family: 'Crimson Text', serif;
+  font-size: 400;
+  font-style: italic;
 }
 
 a:hover {
@@ -50,5 +53,6 @@ img {
 }
 
 p {
-  font-family: 'Noto Sans TC', sans-serif;
+  font-family: 'Crimson Text', serif;
+  font-size: 400;
 }
