--- a/myStyles.css
+++ b/myStyles.css
@@ -29,7 +29,7 @@ ul {
 
 li {
   background: #BF80EE;
-  margin: 10px;
+  margin: 20px;
   padding: 10px;
 }
 
@@ -49,6 +49,7 @@ a:hover {
 
 img {
   border: 0;
+  max-width: 30%;
 
 }
 
