--- a/myStyles.css
+++ b/myStyles.css
@@ -23,12 +23,15 @@ h2 {
 
 ul {
   list-style-type: none;
+  background: #BF80EE;
   margin: 10px;
   padding: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
 li {
-  background: #BF80EE;
   margin: 20px;
   padding: 10px;
 }
@@ -50,10 +53,39 @@ a:hover {
 img {
   border: 0;
   max-width: 30%;
-
 }
 
 p {
   font-family: 'Crimson Text', serif;
   font-size: 400;
+}
+
+#menu_trigger {
+  display: none;
+}
+
+@media screen and (max-width: 699px) {
+
+  ul {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  li {
+    width: 100%;
+    margin: 0px;
+  }
+
+  #menu_trigger {
+    display: block;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 20px;
+    max-width: 50px;
+  }
+
+  #menu_nav {
+    display: none;
+  }
 }
