--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@ a:hover {
     top: 50px;
     right: 20px;
     font-size: 30px;
-    background-color: white;
+    background: none;
     border: none;
   }
 
@@ -252,5 +252,18 @@ a:hover {
   #graphicscontainer {
     max-width: 90%;
   }
+
+}
+
+@media screen and (max-width: 440px) {
+
+  h1 {
+    font-size: 2em;
+  }
+
+  h2 {
+    font-size: 1.5em;
+  }
+
 
 }
